--- a/ConferenceCentral_Complete/index.yaml
+++ b/ConferenceCentral_Complete/index.yaml
@@ -92,5 +92,16 @@ indexes:
 
 - kind: Conference
   properties:
+  - name: seatsAvailable
+  - name: name
+
+- kind: Conference
+  properties:
   - name: topics
+  - name: name
+
+- kind: Session
+  properties:
+  - name: conferenceName
+  - name: speaker
   - name: name
