Added index in Index.yaml due to new queries

--- a/ConferenceCentral_Complete/index.yaml
+++ b/ConferenceCentral_Complete/index.yaml
@@ -105,3 +105,8 @@ indexes:
   - name: conferenceName
   - name: speaker
   - name: name
+
+- kind: Session
+  ancestor: yes
+  properties:
+  - name: inWishlist
