Debug getSessionsInWishlist function Perform queries and add indexes on index.yaml

--- a/ConferenceCentral_Complete/index.yaml
+++ b/ConferenceCentral_Complete/index.yaml
@@ -110,3 +110,9 @@ indexes:
   ancestor: yes
   properties:
   - name: inWishlist
+
+- kind: Session
+  ancestor: yes
+  properties:
+  - name: speaker
+  - name: name
